# ray-ascend

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
docs/: README.md  index.md  mkdocs.yml  requirements-docs.txt
docs/developer_guide/: index.md
docs/user_guide/: index.md
ray_ascend/: __init__.py
ray_ascend/collective/: __init__.py  hccl_collective_group.py
ray_ascend/direct_transport/: __init__.py  hccl_tensor_transport.py  yr_tensor_transport.py  yr_tensor_transport_util.py
tests/: conftest.py
tests/collective/: test_hccl_group.py  test_hccl_via_registry.py
tests/direct_transport/: conftest.py  test_hccl_tensor_transport.py  test_yr_transport.py
